--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,7 +33,7 @@ p {
     padding-left: 16px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background-color: #8e19d2;
     color: white;
     font-weight: 600;
 }
