--- a/src/app/feedback/feedback.component.css
+++ b/src/app/feedback/feedback.component.css
@@ -1,12 +1,13 @@
 .field-full-width {
     width: 100%;
     padding-bottom: 1%;
+    color:aqua;
 }
 
 .button-row {
     text-align: left;
 }
 
-.mat-raised-button {
-    margin: 8px 8px 8px 0;
+button {
+    margin: 5px ;
 }
